data/derived/fa15/progs/unify/prog3061.ml.out
Characters 26-40:
  let rec clone x n = "[" ^ sepConcat "; " ^ (List.combine x n) ^ "]";;
                            ^^^^^^^^^^^^^^
Error: This expression has type string list -> string
       but an expression was expected of type string
